<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clOuter"
    android:padding="@dimen/quad_padding">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/game_activity_forfeit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/single_padding"
        android:textSize="@dimen/text_playing_card"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tvYes"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="@string/game_activity_forfeit_no"
        android:layout_margin="@dimen/double_padding"
        android:textSize="@dimen/text_suit_order"
        android:textColor="?colorPrimary"/>

    <TextView
        android:id="@+id/tvYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tvNo"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:text="@string/game_activity_forfeit_yes"
        android:layout_margin="@dimen/double_padding"
        android:textSize="@dimen/text_suit_order"
        android:textColor="?colorPrimary"/>



</androidx.constraintlayout.widget.ConstraintLayout>