<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/double_padding"
    android:background="@drawable/outline"
>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/turn_view_turn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="@dimen/single_padding"
        android:textSize="@dimen/text_playing_card"
        android:gravity="center" />

    <ImageView
        android:id="@+id/ivYourResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:background="@drawable/close_48px"
        tools:backgroundTint="@color/red_defeat"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:textSize="@dimen/text_extra_large"
        android:layout_margin="@dimen/double_padding"/>

    <TextView
        android:id="@+id/tvYourCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/ivYourResult"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:text="@string/turn_view_your"
        android:layout_margin="@dimen/double_padding"
        android:textSize="@dimen/text_suit_order"
        android:textColor="?colorPrimary"
        android:gravity="left"/>

    <ImageView
        android:id="@+id/ivOpponentResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:background="@drawable/done_48px"
        tools:backgroundTint="@color/green_victory"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:textSize="@dimen/text_extra_large"
        android:layout_margin="@dimen/double_padding"/>

    <TextView
        android:id="@+id/tvOpponentCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@id/ivOpponentResult"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:text="@string/turn_view_opponent"
        android:gravity="right"
        android:layout_margin="@dimen/double_padding"
        android:textSize="@dimen/text_suit_order"
        android:textColor="?colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>